--- a/FirstCourse.vcxproj.filters
+++ b/FirstCourse.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="HeapSort.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TranslationFloatNumCC.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
